# learning-ogl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.cpp  proj.code-workspace
include/: Drawer.h  Shader.h  Texture.h  shaderloader.h
notes/: notes.md  notes1_4.md
oktan/: Buffers.cpp  Buffers.h  CMakeLists.txt  Core.h  FileLoader.cpp  FileLoader.h  Logger.cpp  Logger.h  Shader.h  Texture.h  Version.cfg  main.cpp
oktan/drawer/: Buffers.cpp  Buffers.h  CMakeLists.txt  Drawer.h  Shader.cpp  Texture.h  Window.cpp  Window.h
oktan/platform/: CMakeLists.txt
oktan/platform/glfw/: CMakeLists.txt  GlfwInputHandler.cpp  GlfwInputHandler.h  GlfwWindow.cpp  GlfwWindow.h
oktan/platform/opengl/: CMakeLists.txt  OGLBufferLayout.cpp  OGLBufferLayout.h  OGLIndexBuffer.cpp  OGLIndexBuffer.h  OGLScene.cpp  OGLScene.h  OGLShader.cpp  OGLShader.h  OGLTexture.cpp  OGLTexture.h  OGLVertexArray.cpp  OGLVertexArray.h  OGLVertexBuffer.cpp  OGLVertexBuffer.h  main.cpp
oktan/renderer/: Buffers.cpp  Buffers.h  CMakeLists.txt  Camera.cpp  Camera.h  Drawer.h  InputHandler.cpp  InputHandler.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h
shaders/: 1.4frg.glsl  1.4vtx.glsl  1.6frg.glsl  1.6vtx.glsl  1.7frg.glsl  1.7vtx.glsl  1.8vtx.glsl  simplefragment.glsl  simplefragment.shader  simplevertex.glsl
src/: Drawer.cpp  Shader.cpp  Texture.cpp  main.cpp  shaderloader.cpp
src/glad/: glad.c
